--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+:root {
+	--main-padding: 20px;
+	--header-footer-padding: 15px;
+	--header-height: 5vh;
+	--footer-height: 5vh;
+	--box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
 body {
 	font-family: Arial, sans-serif;
 	margin: 0;
@@ -11,12 +19,17 @@ body {
 }
 
 .header {
+	height: var(--header-height);
 	background-color: #002e5d;
 	color: white;
 	padding: 15px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: sticky;
+	top: 0;
+	box-shadow: var(--box-shadow);
+	z-index: 5;
 }
 
 .header h1 {
@@ -48,7 +61,7 @@ body {
 .main-content {
 	flex-grow: 1;
 	display: flex;
-	padding: 20px;
+	padding: var(--main-padding);
 }
 
 .footer {
@@ -56,7 +69,10 @@ body {
 	color: white;
 	text-align: center;
 	padding: 10px;
-	margin-top: auto;
+	height: var(--footer-height);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* Catalog Layout */
@@ -71,11 +87,14 @@ body {
 	width: 25%;
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: var(--main-padding);
 	background: #f8f9fa;
-	padding: 20px;
+	padding: var(--main-padding);
 	border-radius: 8px;
-	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+	box-shadow: var(--box-shadow);
+	position: sticky;
+    top: calc(var(--header-height) + var(--header-footer-padding) + var(--main-padding));
+	height: fit-content;
 }
 
 /* Search Bar */
@@ -132,6 +151,7 @@ body {
 	border-radius: 8px;
 	margin-bottom: 10px;
 	background: white;
+	box-shadow: var(--box-shadow);
 }
 
 .view-course-btn {
