--- a/src/styles.css
+++ b/src/styles.css
@@ -151,6 +151,7 @@ body {
 /* Course Cards */
 .course-card {
 	min-width: 300px;
+	max-height: 200px;
 	border: 1px solid #ddd;
 	padding: 15px;
 	border-radius: 8px;
