--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 :root {
 	--main-padding: 20px;
 	--header-footer-padding: 15px;
+	--footer-padding: 0px;
 	--header-height: 5vh;
 	--footer-height: 5vh;
 	--box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -27,12 +28,12 @@ body {
 
 .header {
 	height: var(--header-height);
-	background: var(--theme-navy);
-	background: linear-gradient(
+	background: var(--theme-navy-dark);
+	/* background: linear-gradient(
 		-45deg,
 		var(--theme-navy) 0%,
 		var(--theme-navy-light) 100%
-	);
+	); */
 	color: white;
 	padding: 15px;
 	display: flex;
@@ -76,12 +77,7 @@ body {
 }
 
 .footer {
-	background: var(--theme-navy);
-	background: linear-gradient(
-		-45deg,
-		var(--theme-navy) 0%,
-		var(--theme-navy-light) 100%
-	);
+	background: var(--theme-navy-dark);
 	color: white;
 	text-align: center;
 	padding: 10px;
@@ -272,7 +268,12 @@ body {
 }
 
 .course-card-header {
-	background: #00254a;
+	background: var(--theme-navy-light);
+	background: linear-gradient(
+		20deg,
+		var(--theme-navy) 0%,
+		var(--theme-navy-light) 100%
+	);
 	font-family: "Nunito";
 	font-weight: 700;
 	font-size: larger;
@@ -343,6 +344,7 @@ body {
 .pagination-controls select {
 	padding: 5px;
 	font-size: 16px;
+	border-radius: 5px;
 }
 
 .pagination {
